fixed overflow along x axis

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .App {
   text-align: justify;
+  overflow-x: hidden;
 }
